--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Пошлив очко</h1>
 
     
-<script src="champ.js"></script>
+<script src="proid/project1/champ.js"></script>
                          
 </body>
 </html>
