--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-    <h1>Пошлив очко</h1>
+    <h1>Kak dela
+        
+    </h1>
 
     
 <script src="proid/project1/champ.js"></script>
